--- a/src/app/users-list/users-list.component.html
+++ b/src/app/users-list/users-list.component.html
@@ -10,27 +10,30 @@
       <tr>
         <th>ID</th>
         <th>Username</th>
-        <th *ngIf="this.admin">E-mail</th>
-        <th *ngIf="this.admin">Password</th>
-        <th *ngIf="this.admin">Rights</th>
-        <th *ngIf="this.admin">Actions</th>
+        <ng-container *ngIf="this.admin">
+          <th>E-mail</th>
+          <th>Password</th>
+          <th>Rights</th>
+          <th>Actions</th>
+        </ng-container>
       </tr>
     </thead>
     <tbody>
       <tr *ngFor="let user of users | usersFilter:filter">
         <th scope="row">{{user.id}}</th>
         <td>{{user.username}}</td>
-        <td *ngIf="this.admin">{{user.email}}</td>
-        <td *ngIf="this.admin">{{user.password}}</td>
-        <td *ngIf="this.admin">{{user.rights}}</td>
-        <td *ngIf="this.admin">
-          <admin-menu
-            *ngIf="this.admin"
-            [loggedUserId]="this.loggedUser.id"
-            [user]="user"
-            (updateUsers)="updateUsers()">
-          </admin-menu>
-        </td>
+        <ng-container *ngIf="this.admin">
+          <td>{{user.email}}</td>
+          <td>{{user.password}}</td>
+          <td>{{user.rights}}</td>
+          <td>
+            <admin-menu
+              [loggedUserId]="this.loggedUser.id"
+              [user]="user"
+              (updateUsers)="updateUsers()">
+            </admin-menu>
+          </td>
+        </ng-container>
       </tr>
     </tbody>
   </table>
