Updated and cleaned up dependencies, fixed admin-menu margin

--- a/src/app/users-list/users-list.component.html
+++ b/src/app/users-list/users-list.component.html
@@ -26,7 +26,7 @@
           <td>{{user.email}}</td>
           <td>{{user.password}}</td>
           <td>{{user.rights}}</td>
-          <td>
+          <td class="admin-menu">
             <admin-menu
               [loggedUserId]="this.loggedUser.id"
               [user]="user"
