--- a/src/app/admin-menu/admin-menu.component.css
+++ b/src/app/admin-menu/admin-menu.component.css
@@ -1,12 +1,16 @@
 .editBox {
   position: absolute;
-  right: 100px;
+  left: -66px;
+  top: 34px;
   width: 200px;
   height: 181px;
   padding: 8px;
   background-color: rgba(64, 64, 64, 0.9);
   border-radius: 8px;
   z-index: 100;
+  -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+  box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
 }
 
 #input {
